# ai-multi-agent-refactoring-debate

./: .env.anthropic.example  .env.example  .gitignore  .importlinter  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: EVALUATION_TUTORIAL.md  GUIA_DE_CONSTRUCAO.md  GUIA_DE_EXECUCAO.md
examples/: sample_code.py
scripts/: build_tutorial_pdf.py  evaluate.py
src/refactoring_debate/: __init__.py  bootstrap.py  cli.py  config.py  main.py
src/refactoring_debate/agents/: __init__.py  architecture_agent.py  base.py  judge_agent.py  performance_agent.py  prompts.py  sustainability_agent.py
src/refactoring_debate/api/: routes.py  schemas.py
src/refactoring_debate/core/: __init__.py  ast_parser.py  metrics.py  orchestrator.py
src/refactoring_debate/debate/: __init__.py  models.py  protocol.py
src/refactoring_debate/llm/: __init__.py  provider.py
src/refactoring_debate/tools/: __init__.py  base.py  registry.py
src/refactoring_debate/tools/dynamic/: __init__.py  cprofile_tool.py  pyspy_tool.py  scalene_tool.py
src/refactoring_debate/tools/energy/: __init__.py  codecarbon_tool.py
src/refactoring_debate/tools/static/: __init__.py  import_linter_tool.py  pylint_tool.py  radon_tool.py  sonarqube_tool.py
tests/: conftest.py  test_api.py  test_ast_parser.py  test_debate.py  test_pipeline.py  test_tools.py
